# ska-pre-commit-hooks

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .release  CHANGELOG  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  lint-branch-name.sh  lint-commit-msg.sh  pyproject.toml
docs/src/: conf.py  index.rst
docs/src/api/: index.rst
src/ska_pre_commit_hooks/: __init__.py
tests/: __init__.py
tests/mocks/: git
tests/unit/: __init__.py  run_shunit2.sh  test_lint_branch_name.bats  test_lint_branch_name.sh  test_lint_commit_msg.bats  test_lint_commit_msg.sh  test_lint_pre_push.bats  test_lint_pre_push.sh  test_ska_pre_commit_hooks.py  test_version.py
